# bazel-avr-crossplatform

./: .bazelrc  .gitignore  .gitpod.dockerfile  .gitpod.yml  BUILD  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: devcontainer.json
example1/: BUILD  README.md  genheader.bzl  transitions.bzl
example2/: BUILD  README.md  transitions.bzl
example3/: BUILD  README.md  hello.cpp  transition_wrap.bzl  transitions.bzl
toolchains/: avr_cc_toolchain_config.bzl
toolchains/crosscompilers/: BUILD  crosstool-ng.patch  crosstoolng.bzl
toolchains/crosscompilers/avr/: defconfig
tools/: objcopy.bzl
