###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

register_toolchains("//:avr-at90can128_12mhz_toolchain", "//:avr-atmega328p_16mhz_toolchain")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "crosstool-ng",
    build_file_content = "filegroup(name = 'srcs', srcs = glob(['**']), visibility = ['//visibility:public'])",
    sha256 = "d200d1ea5e2056c60d2b11b3f2721d30e53e817e1e0050fffaca074864e2f523",
    strip_prefix = "crosstool-ng-1.24.0",
    url = "http://crosstool-ng.org/download/crosstool-ng/crosstool-ng-1.24.0.tar.bz2",
    patches = ["//toolchains/crosscompilers:crosstool-ng.patch"],
)

crosstool_ng_deps = [
    # AVR
    (
        "zlib-1.2.11",
        "zlib-1.2.11.tar.xz",
        "4ff941449631ace0d4d203e3483be9dbc9da454084111f97ea0a2114e19bf066",
        ["https://sourceforge.net/projects/libpng/files/zlib/1.2.11/"],
    ),
    (
        "gmp-6.1.2",
        "gmp-6.1.2.tar.xz",
        "87b565e89a9a684fe4ebeeddb8399dce2599f9c9049854ca8c0dfbdea0e21912",
        [
            "https://gmplib.org/download/gmp/",
            "https://gmplib.org/download/gmp/archive/",
        ],
    ),
    (
        "mpfr-3.1.6",
        "mpfr-3.1.6.tar.xz",
        "7a62ac1a04408614fccdc506e4844b10cf0ad2c2b1677097f8f35d3a1344a950",
        ["https://www.mpfr.org/mpfr-3.1.6/"],
    ),
    (
        "isl-0.18",
        "isl-0.18.tar.xz",
        "0f35051cc030b87c673ac1f187de40e386a1482a0cfdf2c552dd6031b307ddc4",
        ["https://libisl.sourceforge.io/"],
    ),
    (
        "mpc-1.0.3",
        "mpc-1.0.3.tar.gz",
        "617decc6ea09889fb08ede330917a00b16809b8db88c29c31bfbb49cbf88ecc3",
        ["https://ftp.gnu.org/gnu/mpc/"],
    ),
    (
        "libiconv-1.15",
        "libiconv-1.15.tar.gz",
        "ccf536620a45458d26ba83887a983b96827001e92a13847b45e4925cc8913178",
        [
            "https://ftpmirror.gnu.org/gnu/libiconv/",
            "http://ftpmirror.gnu.org/gnu/libiconv/",
            "https://ftp.gnu.org/gnu/libiconv/",
            "http://ftp.gnu.org/gnu/libiconv/",
        ],
    ),
    (
        "binutils-2.30",
        "binutils-2.30.tar.xz",
        "6e46b8aeae2f727a36f0bd9505e405768a72218f1796f0d09757d45209871ae6",
        [
            "https://ftpmirror.gnu.org/gnu/binutils/",
            "http://ftpmirror.gnu.org/gnu/binutils/",
            "https://ftp.gnu.org/gnu/binutils/",
            "http://ftp.gnu.org/gnu/binutils/",
            "http://mirrors.kernel.org/sourceware/binutils/releases",
            "http://gcc.gnu.org/pub/binutils/releases",
        ],
    ),
    (
        "gcc-7.4.0",
        "gcc-7.4.0.tar.xz",
        "eddde28d04f334aec1604456e536416549e9b1aa137fc69204e65eb0c009fe51",
        [
            "https://ftpmirror.gnu.org/gnu/gcc/gcc-7.4.0/",
            "http://ftpmirror.gnu.org/gnu/gcc/gcc-7.4.0/",
            "https://ftp.gnu.org/gnu/gcc/gcc-7.4.0/",
            "http://ftp.gnu.org/gnu/gcc/gcc-7.4.0/",
            "http://mirrors.kernel.org/sourceware/gcc/releases/gcc-7.4.0/",
            "http://gcc.gnu.org/pub/gcc/releases/gcc-7.4.0",
        ],
    ),
    (
        "avr-libc-2.0.0",
        "avr-libc-2.0.0.tar.bz2",
        "b2dd7fd2eefd8d8646ef6a325f6f0665537e2f604ed02828ced748d49dc85b97",
        ["https://download.savannah.gnu.org/releases/avr-libc/"],
    ),
]

[
    http_file(
        name = d[0],
        downloaded_file_path = d[1],
        sha256 = d[2],
        urls = [x + d[1] for x in d[3]],
    )
    for d in crosstool_ng_deps
]

